rs/ethexe/macros-tests/tests/snapshots/program_insta__generates_handle_with_crate_path.snap
---
source: macros-tests/tests/program_insta.rs
expression: result
---
impl MyProgram {
    pub fn create() -> Self {
        Default::default()
    }
}
impl sails_rename::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails_rename::meta::AnyServiceMeta)] = &[];
    const ASYNC: bool = false;
}
mod meta_in_program {
    use super::*;
    sails_rename::invocation_io!(pub struct __CreateParams {}, entry_id = 0u16,);
    #[derive(sails_rename::TypeInfo)]
    #[type_info(crate = sails_rename::type_info)]
    pub enum ConstructorsMeta {
        Create(__CreateParams),
    }
}
impl sails_rename::solidity::ProgramSignature for MyProgram {
    const CTORS: &'static [sails_rename::solidity::MethodExpo] = &[
        (
            sails_rename::meta::InterfaceId::zero(),
            0u16,
            "create",
            <<(
                bool,
            ) as sails_rename::alloy_sol_types::SolValue>::SolType as sails_rename::alloy_sol_types::SolType>::SOL_NAME,
            <<(
                sails_rename::alloy_primitives::B256,
            ) as sails_rename::alloy_sol_types::SolValue>::SolType as sails_rename::alloy_sol_types::SolType>::SOL_NAME,
        ),
    ];
    const SERVICES: &'static [sails_rename::solidity::ServiceExpo] = &[];
    const METHODS_LEN: usize = 0;
}
const __CTOR_SIGS: [[u8; 4]; <MyProgram as sails_rename::solidity::ProgramSignature>::CTORS
    .len()] = sails_rename::solidity::ConstProgramMeta::<MyProgram>::ctor_sigs();
const _: () = sails_rename::solidity::assert_unique_selectors(&__CTOR_SIGS);
const __CTOR_CALLBACK_SIGS: [[u8; 4]; <MyProgram as sails_rename::solidity::ProgramSignature>::CTORS
    .len()] = sails_rename::solidity::ConstProgramMeta::<
    MyProgram,
>::ctor_callback_sigs();
const __METHOD_SIGS: [[u8; 4]; <MyProgram as sails_rename::solidity::ProgramSignature>::METHODS_LEN] = sails_rename::solidity::ConstProgramMeta::<
    MyProgram,
>::method_sigs();
const _: () = sails_rename::solidity::assert_unique_selectors(&__METHOD_SIGS);
const __METHOD_ROUTES: [(
    sails_rename::meta::InterfaceId,
    u16,
    u8,
); <MyProgram as sails_rename::solidity::ProgramSignature>::METHODS_LEN] = sails_rename::solidity::ConstProgramMeta::<
    MyProgram,
>::method_routes();
const __CALLBACK_SIGS: [[u8; 4]; <MyProgram as sails_rename::solidity::ProgramSignature>::METHODS_LEN] = sails_rename::solidity::ConstProgramMeta::<
    MyProgram,
>::callback_sigs();
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails_rename::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[unsafe(no_mangle)]
    extern "C" fn init() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        if input.is_empty() {
            sails_rename::program_ctor!(
                PROGRAM = MyProgram::create(), params_struct =
                meta_in_program::__CreateParams
            );
            return;
        }
        if let Some(input_sig) = input.get(..4)
            && let Ok(sig) = <[u8; 4]>::try_from(input_sig)
            && let Some(idx) = __CTOR_SIGS.iter().position(|s| s == &sig)
            && let Some(encode_reply) = match_ctor_solidity(
                <MyProgram as sails_rename::solidity::ProgramSignature>::CTORS[idx].1,
                &input[4..],
            )
        {
            if encode_reply {
                let output = [
                    __CTOR_CALLBACK_SIGS[idx].as_slice(),
                    gstd::msg::id().into_bytes().as_slice(),
                ]
                    .concat();
                gstd::msg::reply_bytes(output, 0).expect("Failed to send output");
            }
            return;
        }
        if let Ok(header) = <sails_rename::meta::SailsMessageHeader as sails_rename::Decode>::decode(
            &mut input,
        ) {
            if header.interface_id() != sails_rename::meta::InterfaceId::zero() {
                sails_rename::gstd::unknown_input_panic(
                    "Non zero ctor interface_id",
                    header.to_bytes().as_slice(),
                );
            }
            match header.entry_id() {
                0u16 => {
                    let (): () = sails_rename::scale_codec::DecodeAll::decode_all(
                            &mut input,
                        )
                        .unwrap_or_else(|_| sails_rename::gstd::unknown_input_panic(
                            "Unknown request",
                            input,
                        ));
                    #[cfg(target_arch = "wasm32")]
                    if sails_rename::gstd::msg::value() > 0 {
                        core::panic!("'create' accepts no value");
                    }
                    sails_rename::program_ctor!(
                        PROGRAM = MyProgram::create(), params_struct =
                        meta_in_program::__CreateParams
                    )
                }
                _ => {
                    sails_rename::gstd::unknown_input_panic(
                        "Unexpected ctor entry_id",
                        input,
                    )
                }
            }
        }
    }
    fn match_ctor_solidity(entry_id: u16, input: &[u8]) -> Option<bool> {
        match entry_id {
            0u16 => {
                let (__encode_reply,): (bool,) = sails_rename::alloy_sol_types::SolValue::abi_decode_params(
                        input,
                    )
                    .expect("Failed to decode request");
                #[cfg(target_arch = "wasm32")]
                if sails_rename::gstd::msg::value() > 0 {
                    core::panic!("'create' accepts no value");
                }
                let program = MyProgram::create();
                unsafe { PROGRAM = Some(program) };
                Some(__encode_reply)
            }
            _ => None,
        }
    }
    const SERVICES_COUNT: usize = 0usize;
    const INTERFACE_IDS: &'static [(sails_rename::meta::InterfaceId, u8)] = &sails_rename::meta::interface_ids::<
        SERVICES_COUNT,
    >(&[]);
    #[unsafe(no_mangle)]
    extern "C" fn handle() {
        let mut input = gstd::msg::load_bytes().expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Some(input_sig) = input.get(..4)
            && let Ok(sig) = <[u8; 4]>::try_from(input_sig)
            && let Some(idx) = __METHOD_SIGS.iter().position(|s| s == &sig)
        {
            let (interface_id, entry_id, route_idx) = __METHOD_ROUTES[idx];
        }
        if let Ok(header) = <sails_rename::meta::SailsMessageHeader as sails_rename::Decode>::decode(
            &mut input.as_slice(),
        ) {
            let header_len = header.hlen().inner() as usize;
            let (interface_id, route_id, entry_id) = header
                .try_match_interfaces(INTERFACE_IDS)
                .expect("Failed to find matching service")
                .into_inner();
            match route_id {
                _ => gstd::unknown_input_panic("Unknown route_id", &[route_id]),
            }
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_reply() {
        use sails_rename::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_reply_with_hook();
        }
    }
}
